--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build & gh-pages -d build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+github.com/Vlad-maker/notes-app.git"
+  },
+  "homepage": "https://vlad-maker.github.io/notes-app/",
   "eslintConfig": {
     "extends": [
       "react-app",
